--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,9 @@
     "outDir": "./out-tsc/app",
     "types": ["@types/jest"]
   },
+  "paths": {
+    "tslib" : ["path/to/node_modules/tslib/tslib.d.ts"]
+  },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
