--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "exec-sh": "^0.3.4",
     "faker": "^5.5.3",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^13.2.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
