--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.5",
+    "@angular/animations": "^10.0.14",
     "@angular/cdk": "^11.2.3",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
@@ -27,6 +27,7 @@
     "exec-sh": "^0.3.4",
     "faker": "^5.5.3",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
