Implement the in18

--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,14 @@
             "scripts": []
           },
           "configurations": {
+            "es": {
+              "aot": true,
+              "outputPath": "dist/front/",
+              "i18nFile": "src/locale/messages.es.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "es",
+              "i18nMissingTranslation": "error"
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -72,6 +80,9 @@
           "configurations": {
             "production": {
               "browserTarget": "front:build:production"
+            },
+            "es": {
+              "browserTarget": "front:build:es"
             }
           }
         },
