--- a/angular.json
+++ b/angular.json
@@ -28,13 +28,21 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/ngx-toastr/toastr.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.css"
             ],
             "scripts": []
           },
           "configurations": {
+            "es": {
+              "aot": true,
+              "outputPath": "dist/front/",
+              "i18nFile": "src/locale/messages.es.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "es",
+              "i18nMissingTranslation": "error"
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -73,6 +81,9 @@
           "configurations": {
             "production": {
               "browserTarget": "front:build:production"
+            },
+            "es": {
+              "browserTarget": "front:build:es"
             }
           }
         },
