--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start:es": "ng serve --configuration=es",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,12 +12,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.14",
+    "@angular/animations": "~10.0.5",
     "@angular/cdk": "^11.2.3",
     "@angular/common": "~10.0.5",
     "@angular/compiler": "~10.0.5",
     "@angular/core": "~10.0.5",
     "@angular/forms": "~10.0.5",
+    "@angular/localize": "^10.0.14",
     "@angular/material": "^11.2.11",
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
@@ -27,7 +28,7 @@
     "exec-sh": "^0.3.4",
     "faker": "^5.5.3",
     "jquery": "^3.6.0",
-    "ngx-toastr": "^14.0.0",
+    "ngx-toastr": "^13.2.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
