--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,20 @@
-sonar.host.url=http://157.253.238.75:8080/sonar-misovirtual/ 
-sonar.projectKey=202112_Equipo_03:sonar
-sonar.projectName=202112_Equipo_03
+sonar.projectKey=Dherrera54_metricas_calidad_vinilos_front
+sonar.organization=dherrera54
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=metricas_calidad_vinilos_front
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
 sonar.projectVersion=1.0
 sonar.sources=src/app
 sonar.test=src/app
 sonar.test.inclusions=**/*.spec.ts
 sonar.exclusions=**/*.module.ts
-sonar.ts.tslint.configPath=tslint.json
-sonar.javascript.lcov.reportPaths=coverage/front/lcov.info
-sonar.testExecutionReportPaths=reports/ut_report.xml
+#sonar.ts.tslint.configPath=tslint.json
+#sonar.javascript.lcov.reportPaths=coverage/front/lcov.info
+#sonar.testExecutionReportPaths=reports/ut_report.xml
