--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Instalación de librerías y dependencias
         run: |
-          npm install
+          npm install --save --legacy-peer-deps
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
