--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,15 +2,14 @@ sonar.projectKey=Dherrera54_metricas_calidad_vinilos_front
 sonar.organization=dherrera54
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=metricas_calidad_vinilos_front
-#sonar.projectVersion=1.0
+sonar.projectName=metricas_calidad_vinilos_front
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
-sonar.projectVersion=1.0
 sonar.sources=src/app
 sonar.test=src/app
 sonar.test.inclusions=**/*.spec.ts
