--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,11 +9,11 @@ sonar.projectVersion=1.0
 #sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
 sonar.sources=src/app
 sonar.test=src/app
 sonar.test.inclusions=**/*.spec.ts
 sonar.exclusions=**/*.module.ts
-#sonar.ts.tslint.configPath=tslint.json
-#sonar.javascript.lcov.reportPaths=coverage/front/lcov.info
-#sonar.testExecutionReportPaths=reports/ut_report.xml
+sonar.ts.tslint.configPath=tslint.json
+sonar.javascript.lcov.reportPaths=coverage/front/lcov.info
+sonar.testExecutionReportPaths=reports/ut_report.xml
