test sonar coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=src/app
 sonar.test=src/app
 sonar.test.inclusions=**/*.spec.ts
-sonar.exclusions=**/*.module.ts
+sonar.exclusions=**/*.module.ts, =**/model
 sonar.ts.tslint.configPath=tslint.json
 sonar.javascript.lcov.reportPaths=coverage/front/lcov.info
 sonar.testExecutionReportPaths=reports/ut_report.xml
